--- a/story 3.html
+++ b/story 3.html
@@ -6,21 +6,9 @@
   </head>
     
   <body bgcolor="ffe9f4">
-  
-  <header>
-    <h1>Story Time with Teo</h1>
-
-    <nav>
-      <ul>
-        <li> <a href="index.html">Story 1</a> </a> </li>
-        <li> <a href="story 2.html">Story 2</a> </a> </li>
-        <li> <a href="story 3.html">Story 3</a> </a> </li>
-      </ul>
-    </nav>
-  </header>
         <h1>Story 1</h1>
 
-        <p style = "font-family:courier"> A sweet aroma was dangling through the air as he slowly opened his eyes. “Caramel cookies? No way!” he thought to himself anticipating gulping down his favorite dessert. “Mom?” Wait no, something’s not right. This thought arisen as he started scanning the room he was in. Dark, wet, with a single purple glow coming from a thorny chandelier like object above him. ‘This is nothing like ma’s place!’ he yelped trying to get up when he felt a sharp pain all over his body. He looked down. He was bandaged all over. Increasingly more terrified, memories started to flow back</p>
+        <p>A sweet aroma was dangling through the air as he slowly opened his eyes. “Caramel cookies? No way!” he thought to himself anticipating gulping down his favorite dessert. “Mom?” Wait no, something’s not right. This thought arisen as he started scanning the room he was in. Dark, wet, with a single purple glow coming from a thorny chandelier like object above him. ‘This is nothing like ma’s place!’ he yelped trying to get up when he felt a sharp pain all over his body. He looked down. He was bandaged all over. Increasingly more terrified, memories started to flow back</p>
 
         <p>“Oh look who’s finally arisen! I thought you might already be dead, which, only letting you know of this little secret due to your current circumstance, would've really saddend me. I had already schemed out our next encounter and even hired a tank of piranhas.” said the flamboyant villain as he dramatically fell on the couch next to him..</p>
         
@@ -53,8 +41,6 @@
         <p>“What a marvelous turn of events!” villain giggled almost spitting out his wine. “I never thought I’d ever hear such words come out of you mouth. Shall we master a plan?” He said grinning as his evil essenced cookies were taking over hero’s mind.</p>
 
         <p>A tear dripped down his face. He would never have to be alone again.</p>
-
-        <p> <input type="button" value="Next Story" onclick="changestory()"> <p>
   </body>
 </html>
 
