--- a/story 2.html
+++ b/story 2.html
@@ -6,6 +6,19 @@
   </head>
     
   <body bgcolor="ffe9f4">
+
+  <header>
+    <h1>Story Time with Teo</h1>
+
+    <nav>
+      <ul>
+        <li> <a href="index.html">Story 1</a> </a> </li>
+        <li> <a href="story 2.html">Story 2</a> </a> </li>
+        <li> <a href="story 3.html">Story 3</a> </a> </li>
+      </ul>
+    </nav>
+  
+  </header>
         <h1>Story 2</h1>
 
         <p>[WP] You work at a small bookstore. You love and cherish these books, and meticulously care for them. One slow afternoon, a novel falls from its shelf. You bend down to retrieve it, and notice there is only one word written on the page: ‘“Run.”’</p>
@@ -21,6 +34,8 @@
         <p>“I’m sorry, sir, then I can’t give you the book and I’m afraid I’ll have to ask you to leave.” she promptly replied.</p>
         <p>The man looked down at her. He said nothing. Taking off his spectacles, he revealed a pair of small, pitch black eyes. Instantly Aubrey started feeling that same emotion she had just experienced, but this time it was amplified, combined with sheer terror. She wanted to run and scream, but couldn’t. She felt compelled to keep staring into those eyes as the man took the book from her hands. With a snap of his fingers, he vanished and the room went dark.</p>
         
+        <p> <input type="button" value="Previous Story" onclick="changestory()"> <p></p>
+        <p> <input type="button" value="Next Story" onclick="changestory()"> <p></p>
   </body>
 </html>
 
