--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <p>A tear dripped down his face. He would never have to be alone again.</p>
 
-        <p> <input type="button" value="Next Story" onclick="changestory()"> <p>
+        <!-- <p> <input type="button" value="Next Story" onclick="changestory()"> <p> -->
   </body>
 </html>
 
