--- a/story 2.html
+++ b/story 2.html
@@ -34,8 +34,8 @@
         <p>“I’m sorry, sir, then I can’t give you the book and I’m afraid I’ll have to ask you to leave.” she promptly replied.</p>
         <p>The man looked down at her. He said nothing. Taking off his spectacles, he revealed a pair of small, pitch black eyes. Instantly Aubrey started feeling that same emotion she had just experienced, but this time it was amplified, combined with sheer terror. She wanted to run and scream, but couldn’t. She felt compelled to keep staring into those eyes as the man took the book from her hands. With a snap of his fingers, he vanished and the room went dark.</p>
         
-        <p> <input type="button" value="Previous Story" onclick="changestory()"> <p></p>
-        <p> <input type="button" value="Next Story" onclick="changestory()"> <p></p>
+        <!-- <p> <input type="button" value="Previous Story" onclick="changestory()"> <p></p>
+        <p> <input type="button" value="Next Story" onclick="changestory()"> <p></p> -->
   </body>
 </html>
 
