--- a/story 3.html
+++ b/story 3.html
@@ -34,9 +34,9 @@
         <p>“Honey, are you okay?” I was panting. I peek through my fingers and I see him standing still. His eyes were widening and their color was changing. The deep and warm brown irises I’d get lost into for hours and hours every day were no longer there. Terror was settling in. I took a few steps back still covering my eyes when I hear a cracking noise. I peaked again. Oh, how I wish I hadn’t. His joints were bending at every wrong angle and his head had twisted at 180 degrees. I burst into tears. The love of my life was right beside me, yet I had never felt so helpless and terrified.</p>
         <p>He started squirming towards me. I didn’t run. Not knowing what to do, I dropped to the floor shaking and reached towards him. “Hold my hand. It’s g...going to be o...okay” I managed to mutter through my cries. What I once knew as his beautiful hand squeezed mine. It was ice cold. That’s when he finally spoke, in a gentle, all familiar tone.</p>
         <p>“It’s a beautiful night outside, my love. Look outside.”</p>
-
+<!-- 
         <p> <input type="button" value="Previous Story" onclick="changestory()"> <p></p>
-        <p> <input type="button" value="Next Story" onclick="changestory()"> <p></p>
+        <p> <input type="button" value="Next Story" onclick="changestory()"> <p></p> -->
   </body>
 </html>
 
