--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 .topnav a:hover {
   background-color: #FF69B4;
-  color:#3f3f3f;
+  color:black;
 }
 
 .leftcolumn {   
@@ -41,7 +41,7 @@
 .rightcolumn {
   float: left;
   width: 25%;
-  background-color: #ffe9f4;
+  background-color: #ffb8c6;
   padding-left: 20px;
 }
 
@@ -57,7 +57,7 @@
   margin-top: 20px;
 }
 .fa-instagram {
-  background: #FF69B4;
+  background: #ffb8c6;
   color: white;
 }
 .fa-linkedin {
@@ -66,9 +66,7 @@
 }
       </style>
   </head>
-    
-  <body bgcolor="ffe9f4">
-  
+      
     <div class="header">
       <h1>Story Time with Teo</h1>
     </div>
@@ -82,9 +80,8 @@
     <div class="row">
       <div class="leftcolumn">
           <h2>Welcome to my blog!</h2>
-          <p>Welcome to my blog! Here I'll be posting original short stories to keep track of my writing progress. Come with me on this fiction journey and make sure to listen to the recommended songs for full immersion.</p>
+          <p>Welcome to my blog! Here I'll be posting original short stories to keep track of my writing progress. Come with me on this fiction journey and make sure to listen to the recommended songs for the full immersion.</p>
        </div>
-     </div>
 
     <div class="rightcolumn">
     <div class="card">
@@ -97,6 +94,7 @@
       <a href=https://www.instagram.com/nymphettamine_/" class="fa fa-instagram"></a>
     </div>
   </div>
+</div>
 
         <!-- <p> <input type="button" value="Next Story" onclick="changestory()"> <p> -->
   </body>
