--- a/index.html
+++ b/index.html
@@ -77,21 +77,23 @@
         <a href="story 3.html">Story 3</a> </a> 
     </div>
 
-    <div class="row">
-      <div class="leftcolumn">
-          <h2>Welcome to my blog!</h2>
-          <p>Welcome to my blog! Here I'll be posting original short stories to keep track of my writing progress. Come with me on this fiction journey and make sure to listen to the recommended songs for the full immersion.</p>
-       </div>
 
-    <div class="rightcolumn">
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>Welcome to my blog!</h2>
+      <p>Welcome to my blog! Here I'll be posting original short stories to keep track of my writing progress. Come with me on this fiction journey and make sure to listen to the recommended songs for the full immersion.</p>
+      
+    </div>
+    
+  <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
       <p>Aspiring programmer who's rediscovered her passion for writting.</p>
     </div>
     <div class="card">
-      <h3>Follow me</h3>
       <a href="#" class="fa fa-linkedin"></a>
-      <a href=https://www.instagram.com/nymphettamine_/" class="fa fa-instagram"></a>
+      <a href="https://www.instagram.com/nymphettamine_/" class="fa fa-instagram"></a>
     </div>
   </div>
 </div>
