--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ a:hover {
 }
 
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
+  .leftcolumn, .rightcolumn, .title {   
     width: 100%;
     padding: 0;
   }
