--- a/story 1.html
+++ b/story 1.html
@@ -117,7 +117,7 @@ a:hover {
 }
 
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
+  .leftcolumn, .rightcolumn, .title{   
     width: 100%;
     padding: 0;
   }
