--- a/story 3.html
+++ b/story 3.html
@@ -115,7 +115,7 @@ a:hover {
 }
 
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
+  .leftcolumn, .rightcolumn, .title {   
     width: 100%;
     padding: 0;
   }
