--- a/story 2.html
+++ b/story 2.html
@@ -61,7 +61,6 @@ a:hover {
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none;
 }
 
 .topnav a:hover {
@@ -115,7 +114,7 @@ a:hover {
 }
 
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
+  .leftcolumn, .rightcolumn, .title {   
     width: 100%;
     padding: 0;
   }
