--- a/story 2.html
+++ b/story 2.html
@@ -1,143 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link href="stylesheet.css" rel="stylesheet" type="text/css" media="all">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Story Time with Teo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-
-.font {
-   font-size: 1em !important;
-   color: #000 !important;
-   font-family: Lucida !important;
-}           
-      
-.title {
-  background: url(https://t4.ftcdn.net/jpg/00/23/92/19/500_F_23921908_7vUsh4IHAjTwYveF3EK6HeRX2vN89tr6.jpg) -80px -80px;
-  color: red;
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  font-weight: bold;
-  font-size: 100px;
-  font-family: arial, helvetica;
-  width: 1500px;
-  margin: 50px auto;
-  text-align: center;
-  background-color: #ffb8c6;
-}  
-
-a {
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 16px;
-  border-radius: 5px
-}
-
-a:hover {
-  background-color: #ffb8c6;
-  color: black;
-}
-
-.previous {
-  background-color: black;
-  color: #ffb8c6;
-}
-
-.next {
-  background-color: black;
-  color: #ffb8c6;
-}
-
-      .topnav {
-  overflow: hidden;
-  background-color: #3f3f3f;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-}
-
-.topnav a:hover {
-  background-color: #ffb8c6;
-  color:black;
-}
-
-.leftcolumn {   
-  float: left;
-  width: 75%;
-  padding: 20px;
-  background-color: #ffb8c6;
-}
-
-.rightcolumn {
-  float: right;
-  width: 25%;
-  background-color: #ffb8c6;
-  padding: 20px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.card {
-  background-color:white;
-  padding: 20px;
-  margin: 20px;
-  border-radius: 5px
-}
-
-.fa {
-  font-size: 14px;
-  width: 45px;
-  text-align: center;
-  margin: 5px 2px;
-  border-radius: 50%;
-}
-
-.fa-instagram {
-  background: #FF69B4;
-  color: white;
-}
-
-.fa-linkedin {
-  background: #FF69B4;
-  color: white;
-}
-
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn, .title {   
-    width: 100%;
-    padding: 0;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .topnav a {
-    float: none;
-    width: 100%;
-  }
-}
-
-
-.respond textarea {
-  margin-bottom: 10px;
-  display: inline;
-  width: 20%;
-  height: 20PX;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-
-}
-
-      </style>
   </head>
 
   <body style="font-family:Lucida Sans"></body>
@@ -149,6 +19,7 @@ a:hover {
           <a href="story 1.html">Story 1</a> </a> 
           <a href="story 2.html">Story 2</a> </a> 
           <a href="story 3.html">Story 3</a> </a> 
+          <a href="story 4.html">Story 4</a> </a> 
       </div>
   
   
