--- a/story 4.html
+++ b/story 4.html
@@ -83,7 +83,7 @@
 
       <div class="card">
         <h2>About Me</h2>
-        <p>Aspiring programmer who's rediscovered her passion for writting.</p>
+        <p>Aspiring programmer who's rediscovered her passion for writing.</p>
       </div>
       
       <div class="card">
