--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="story 2.html">Story 2</a> </a> 
         <a href="story 3.html">Story 3</a> </a> 
         <a href="story 4.html">Story 4</a> </a> 
+        <a href="story 5.html">Story 5</a> </a> 
     </div>
 
 
